--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 
 
-</body>
+</body>a
 <script type="text/javascript">
 	document.getElementById("ok").addEventListener("click", function(){
 		a = document.getElementById("a").value;
